--- a/Coding_assignments/Assignment_4/TADIPATRI UDAY KIRAN REDDY - Programming_Assignment-04-Neural_Networks.ipynb
+++ b/Coding_assignments/Assignment_4/TADIPATRI UDAY KIRAN REDDY - Programming_Assignment-04-Neural_Networks.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "id": "Exk1ALx4LXWA"
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -130,9 +130,9 @@
     "    return X_batched, Y_batched\n",
     "\n",
     "def one_hot_encode(Y, nClasses):\n",
-    "    Y_one = np.zeros((Y.shape[0], nClasses))\n",
+    "    Y_one = np.zeros((Y.shape[0], nClasses), dtype=int)\n",
     "    for i in range(nClasses):\n",
-    "        ones = np.ones(nClasses)\n",
+    "        ones = np.zeros(nClasses)\n",
     "        ones[i] = 1\n",
     "        Y_one[(Y == i)[:, 0], :] = ones\n",
     "    \n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,8 @@
     "\n",
     "def golrot(fan_in, fan_out):\n",
     "    std_dev = np.sqrt(2/(fan_in + fan_out))\n",
-    "    return std_dev*np.random.randn(fan_in, fan_out)\n",
+    "    W = np.random.normal(scale=std_dev, size=(fan_in, fan_out))\n",
+    "    return W\n",
     "    \n",
     "def ReLu(X):\n",
     "    return np.maximum(X, np.zeros(X.shape))\n",
@@ -164,16 +165,18 @@
     "    grad[X > 0] = 1\n",
     "    return grad\n",
     "    \n",
-    "def softmax(x, temp=1.0):\n",
-    "    e = np.exp(x/temp)\n",
-    "    s = np.sum(e, axis=1).reshape(-1, 1)\n",
+    "# def softmax(x, temp=1.0):\n",
+    "#     e = np.exp(x/temp)\n",
+    "#     s = np.sum(e, axis=1).reshape(-1, 1)\n",
+    "#     return e/s\n",
+    "\n",
+    "def softmax(x):\n",
+    "    e = np.exp(x - np.max(x, axis=1, keepdims=True))\n",
+    "    s = np.sum(e, axis=1, keepdims=True)\n",
     "    return e/s\n",
     "\n",
     "def cross_entropy(y_hat, y):\n",
-    "    idx = (y_hat > 0)[:, 0]\n",
-    "    y_hat_ = y_hat[idx, :]\n",
-    "    y_ = y[idx, :]\n",
-    "    return -1*np.sum(y_*np.log2(y_hat_))\n",
+    "    return -1*np.sum(y *np.log(y_hat + np.finfo(float).eps))\n",
     "\n",
     "def accuracy(y_hat, y):\n",
     "    \n",
@@ -190,7 +193,7 @@
     "        \n",
     "        self.W1 = golrot(self.input_size + 1, self.inter_size + 1)\n",
     "        self.W2 = golrot(self.inter_size + 1, self.inter_size + 1)\n",
-    "        self.W3 = golrot(self.inter_size + 1, 7)\n",
+    "        self.W3 = golrot(self.inter_size + 1, self.nClasses)\n",
     "        \n",
     "        self.Y1 = None\n",
     "        self.Y2 = None\n",
@@ -202,7 +205,7 @@
     "        \n",
     "    def forward(self, X):\n",
     "        B, I = X.shape\n",
-    "        \n",
+    "        X_norm = (X - np.mean(X, axis=1, keepdims=True))/np.sqrt(np.var(X, axis=1, keepdims=True))\n",
     "        # Input Layer\n",
     "        self.Z0 = np.hstack((X, np.ones((B, 1))))\n",
     "        \n",
@@ -220,44 +223,74 @@
     "        \n",
     "        return logits\n",
     "    \n",
-    "    def sgd_update(self, logits, Y, eta=1e-3):\n",
-    "        loss = cross_entropy(logits, Y)\n",
+    "    def sgd_update(self, logits, Y, eta=1e-3, regularisation = 1e-3):\n",
+    "        loss = cross_entropy(logits, Y) + 0.5*regularisation*np.sum(np.power(net.get_weights_norm(), 2))\n",
     "        \n",
     "        error = (Y - logits)\n",
     "        \n",
-    "        grad_W3 = self.Z2.T @ error\n",
     "        \n",
+    "        delta_3 = error\n",
+    "#         print(delta_3.shape, self.W3.shape, grad_ReLu(self.Y3).shape)\n",
+    "        delta_2 = np.multiply((delta_3@self.W3.T), grad_ReLu(self.Y2))\n",
+    "        delta_1 = np.multiply((delta_2@self.W2.T), grad_ReLu(self.Y1))\n",
     "        \n",
-    "        grad_Z2 = error @ self.W3.T\n",
-    "        grad_W2 = self.Z1.T @ (grad_ReLu(self.Y2) * grad_Z2)\n",
-    "        grad_Z1 = (grad_ReLu(self.Y2) * grad_Z2) @ self.W2\n",
-    "        \n",
-    "        grad_W1 = self.Z0.T @ (grad_ReLu(self.Y1) * grad_Z1)\n",
-    "        \n",
+    "        grad_W3 = self.Z2.T @ delta_3 + regularisation*self.W3\n",
+    "        grad_W2 = self.Z1.T @ delta_2 + regularisation*self.W2\n",
+    "        grad_W1 = self.Z0.T @ delta_1 + regularisation*self.W1\n",
     "        \n",
     "        self.W3 -= eta*grad_W3\n",
     "        self.W2 -= eta*grad_W2\n",
     "        self.W1 -= eta*grad_W1\n",
     "        \n",
-    "        return loss"
+    "        return loss\n",
+    "    \n",
+    "    def get_weights_norm(self):\n",
+    "        return [np.linalg.norm(self.W1), np.linalg.norm(self.W2), np.linalg.norm(self.W3)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
+   "execution_count": 106,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (32,10) (32,7) ",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH [1/10]:- Training Accuracy = 12.5, Training Loss = 1009.7996, Validation Accuracy = 15.0, Validation Loss = 3063.7105\n",
+      "EPOCH [2/10]:- Training Accuracy = 6.25, Training Loss = 1082.6164, Validation Accuracy = 15.0, Validation Loss = 3063.7105\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-104-58304aa7f068>:67: RuntimeWarning: overflow encountered in matmul\n",
+      "  self.Y2 = self.Z1@self.W2\n",
+      "<ipython-input-104-58304aa7f068>:24: RuntimeWarning: invalid value encountered in subtract\n",
+      "  e = np.exp(x - np.max(x, axis=1, keepdims=True))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH [2/10]:- Training Accuracy = 21.88, Training Loss = nan, Validation Accuracy = 8.0, Validation Loss = nan\n",
+      "EPOCH [3/10]:- Training Accuracy = 12.5, Training Loss = nan, Validation Accuracy = 8.0, Validation Loss = nan\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [139]\u001b[0m, in \u001b[0;36m<cell line: 17>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, (X, Y) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28mzip\u001b[39m(X_batched, Y_batched)):\n\u001b[1;32m     20\u001b[0m     logits \u001b[38;5;241m=\u001b[39m net\u001b[38;5;241m.\u001b[39mforward(X)\n\u001b[0;32m---> 21\u001b[0m     loss \u001b[38;5;241m=\u001b[39m \u001b[43mnet\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msgd_update\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m     trainLosses\u001b[38;5;241m.\u001b[39mappend(loss)\n\u001b[1;32m     24\u001b[0m     trainAccuracy\u001b[38;5;241m.\u001b[39mappend(accuracy(logits, Y))\n",
-      "Input \u001b[0;32mIn [138]\u001b[0m, in \u001b[0;36mcustom_DNN.sgd_update\u001b[0;34m(self, logits, Y, eta)\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msgd_update\u001b[39m(\u001b[38;5;28mself\u001b[39m, logits, Y, eta\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-3\u001b[39m):\n\u001b[0;32m---> 74\u001b[0m     loss \u001b[38;5;241m=\u001b[39m \u001b[43mcross_entropy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     76\u001b[0m     error \u001b[38;5;241m=\u001b[39m (Y \u001b[38;5;241m-\u001b[39m logits)\n\u001b[1;32m     78\u001b[0m     grad_W3 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mZ2\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m@\u001b[39m error\n",
-      "Input \u001b[0;32mIn [138]\u001b[0m, in \u001b[0;36mcross_entropy\u001b[0;34m(y_hat, y)\u001b[0m\n\u001b[1;32m     24\u001b[0m y_hat_ \u001b[38;5;241m=\u001b[39m y_hat[idx, :]\n\u001b[1;32m     25\u001b[0m y_ \u001b[38;5;241m=\u001b[39m y[idx, :]\n\u001b[0;32m---> 26\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39msum(\u001b[43my_\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlog2\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_hat_\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (32,10) (32,7) "
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [106]\u001b[0m, in \u001b[0;36m<cell line: 17>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     X_batched, Y_batched \u001b[38;5;241m=\u001b[39m create_batches(X_train, Y_train_one, batchSize)\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i, (X, Y) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28mzip\u001b[39m(X_batched, Y_batched)):\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m#         print(net.get_weights_norm())\u001b[39;00m\n\u001b[0;32m---> 21\u001b[0m         logits \u001b[38;5;241m=\u001b[39m \u001b[43mnet\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m         loss \u001b[38;5;241m=\u001b[39m net\u001b[38;5;241m.\u001b[39msgd_update(logits, Y, eta\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-8\u001b[39m)\n\u001b[1;32m     24\u001b[0m         trainLosses\u001b[38;5;241m.\u001b[39mappend(loss)\n",
+      "Input \u001b[0;32mIn [104]\u001b[0m, in \u001b[0;36mcustom_DNN.forward\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mZ1 \u001b[38;5;241m=\u001b[39m ReLu(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mY1)\n\u001b[1;32m     66\u001b[0m \u001b[38;5;66;03m# Layer 2\u001b[39;00m\n\u001b[0;32m---> 67\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mY2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZ1\u001b[49m\u001b[38;5;129;43m@self\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mW2\u001b[49m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mZ2 \u001b[38;5;241m=\u001b[39m ReLu(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mY2)\n\u001b[1;32m     70\u001b[0m \u001b[38;5;66;03m# Output Layer\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -268,7 +301,7 @@
     "nEpochs = 10\n",
     "step = 0\n",
     "batchSize = 32\n",
-    "validFrequency = 50 # After every 50th batch\n",
+    "validFrequency = 150 # After every 50th batch\n",
     "\n",
     "net = custom_DNN(784, 10)\n",
     "\n",
@@ -276,33 +309,33 @@
     "trainAccuracy = []\n",
     "validLosses = []\n",
     "validAccuracy = []\n",
-    "\n",
+    "weights = []\n",
     "\n",
     "while step < nEpochs:\n",
     "    X_batched, Y_batched = create_batches(X_train, Y_train_one, batchSize)\n",
     "    for i, (X, Y) in enumerate(zip(X_batched, Y_batched)):\n",
+    "#         print(net.get_weights_norm())\n",
     "        logits = net.forward(X)\n",
-    "        loss = net.sgd_update(logits, Y)\n",
+    "        loss = net.sgd_update(logits, Y, eta=1e-8)\n",
     "        \n",
     "        trainLosses.append(loss)\n",
     "        trainAccuracy.append(accuracy(logits, Y))\n",
+    "        weights.append(net.get_weights_norm())\n",
+    "#         print(net.Y3[0, :])\n",
+    "#         print(logits[0, :])\n",
+    "#         print(Y[0, :])\n",
     "        \n",
-    "        if (i+1)%validFrequency == validFrequency-1:\n",
-    "            predLogits = net.forward(X_test)\n",
-    "            validLosses.append(cross_entropy(predLogits, Y_test_one))\n",
-    "            validAccuracy.append(accuracy(predLogits, Y_test_one))\n",
-    "            print(\"EPOCH [{}/{}]:- Training Accuracy = {}, Trainig Loss = {}, Validation Accuracy = {}, Validation Loss = {}\".format(step+1, nEpochs, np.round(trainAccuracy[-1], 2), np.round(trainLosses[-1], 4), np.round(validAccuracy[-1], 2), np.round(validLosses[-1], 4)))\n",
-    "    \n",
+    "#         break\n",
+    "        if (i)%validFrequency == 0:\n",
+    "            predLogits = net.forward(X_test[0:100, :])\n",
+    "            validLosses.append(cross_entropy(predLogits, Y_test_one[0:100, :]))\n",
+    "            validAccuracy.append(accuracy(predLogits, Y_test_one[0:100, :]))\n",
+    "            print(\"EPOCH [{}/{}]:- Training Accuracy = {}, Training Loss = {}, Validation Accuracy = {}, Validation Loss = {}\".format(step+1, nEpochs, np.round(trainAccuracy[-1], 2), np.round(trainLosses[-1], 4), np.round(validAccuracy[-1], 2), np.round(validLosses[-1], 4)), end=\"\\r\")\n",
+    "#             print(\"weights\", weights[-1])\n",
+    "#             print(logits[0, :])\n",
+    "#             print(Y[0, :])\n",
+    "    print(\"\")\n",
     "    step += 1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = np.random.randn(1000, 10)"
    ]
   },
   {
